--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.3.3
-pandas==2.0.3
-numpy==1.24.3
-akshare==1.11.78
-openpyxl==3.1.2
-Werkzeug==2.3.7
-gunicorn==21.2.0
+Flask>=2.3.0,<3.0.0
+pandas>=2.0.0,<3.0.0
+numpy>=1.24.0,<2.0.0
+akshare>=1.11.0
+openpyxl>=3.1.0,<4.0.0
+Werkzeug>=2.3.0,<3.0.0
+gunicorn>=21.2.0,<22.0.0
