修复 Vercel 500 错误：适配 serverless 环境，添加会员系统

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,15 @@ __pycache__/
 .Python
 *.log
 *.pid
-*.json
 *.xlsx
 .env
 .venv/
 venv/
 ENV/
+
+# 用户数据文件（不提交到 Git）
+users.json
+invite_codes.json
 
 # IDE
 .vscode/
