修复 Vercel 导入错误：排除 app.py，确保使用正确的入口文件

--- a/vercel.json
+++ b/vercel.json
@@ -28,5 +28,10 @@
       "maxDuration": 60
     }
   },
-  "regions": ["hkg1"]
+  "regions": ["hkg1"],
+  "ignore": [
+    "app.py",
+    "surge_analysis_web.py",
+    "weekly_kline_web.py"
+  ]
 }
