--- a/vercel.json
+++ b/vercel.json
@@ -28,10 +28,5 @@
       "maxDuration": 60
     }
   },
-  "regions": ["hkg1"],
-  "ignore": [
-    "app.py",
-    "surge_analysis_web.py",
-    "weekly_kline_web.py"
-  ]
+  "regions": ["hkg1"]
 }
