--- a/vercel.json
+++ b/vercel.json
@@ -13,5 +13,10 @@
       "source": "/:path*",
       "destination": "/api/index.py"
     }
-  ]
+  ],
+  "functions": {
+    "api/index.py": {
+      "maxDuration": 60
+    }
+  }
 }
