实现自动扫描系统：免费用户每天3:00自动扫描，VIP用户每天11:30自动扫描，超级用户无限制

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,12 @@
 {
-  "version": 2,
-  "rewrites": [
+  "crons": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/index.py"
+      "path": "/api/auto_scan",
+      "schedule": "0 15 * * *"
     },
     {
-      "source": "/static/:path*",
-      "destination": "/static/:path*"
-    },
-    {
-      "source": "/:path*",
-      "destination": "/api/index.py"
+      "path": "/api/auto_scan",
+      "schedule": "30 11 * * *"
     }
   ]
 }
