--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "crons": [
     {
-      "path": "/api/auto_scan",
-      "schedule": "0 15 * * *"
+      "path": "/api/cron?tier=premium",
+      "schedule": "30 11 * * *"
     },
     {
-      "path": "/api/auto_scan",
-      "schedule": "30 11 * * *"
+      "path": "/api/cron?tier=free",
+      "schedule": "0 15 * * *"
     }
   ]
 }
