--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "crons": [
     {
-      "path": "/api/cron?tier=premium",
-      "schedule": "30 11 * * *"
+      "path": "/api/cron?scan_type=noon",
+      "schedule": "30 11 * * 1-5"
     },
     {
-      "path": "/api/cron?tier=free",
-      "schedule": "0 15 * * *"
+      "path": "/api/cron?scan_type=afternoon",
+      "schedule": "0 15 * * 1-5"
     }
   ]
 }
