--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,4 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/index.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.py"
-    }
-  ],
   "crons": [
     {
       "path": "/api/cron?scan_type=noon",
@@ -24,6 +7,14 @@
     {
       "path": "/api/cron?scan_type=afternoon",
       "schedule": "0 15 * * 1-5"
+    },
+    {
+      "path": "/api/refresh_stock_cache",
+      "schedule": "*/5 9-15 * * 1-5"
+    },
+    {
+      "path": "/api/refresh_stock_cache",
+      "schedule": "5 15 * * 1-5"
     }
   ]
 }
