--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,22 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/index.py"
+    }
+  ],
+  "functions": {
+    "api/index.py": {
+      "maxDuration": 10
+    }
+  },
   "crons": [
     {
       "path": "/api/cron?scan_type=noon",
