--- a/.vercelignore
+++ b/.vercelignore
@@ -56,6 +56,8 @@ training_*.json
 retrain_*.json
 test_result_*.json
 login_test_*.json
+# 但保留必需的模型文件
+!trained_model.json
 
 # 文档（可选，如果不需要部署）
 *.md
